--- a/style.css
+++ b/style.css
@@ -15,12 +15,10 @@ body{
 	padding: 20px;
 }
 #header{
-    width: 100%;
-    height: 100vh;
-	background: white;
-    /* background-image: url(./img/background.png); */
-    background-size: cover;
-    background-position: center;
+    background-image: url(./img/bg1.png);
+	background-size: initial;
+	background-repeat: no-repeat;
+	background-position: right 15% bottom 15%;
 }
 .logo{
 	width: 500px;
@@ -387,7 +385,10 @@ nav .fas{
 		font-size: 28px;
 	}
 	#header{
-		background-image: url(img/phone-bg.png);
+		background-image: url(./img/bg1.png);
+		background-size: initial;
+		background-repeat: no-repeat;
+		background-position: right 15% bottom 15%;
 	}
 	h1{
 		margin-bottom: 15px;
@@ -522,6 +523,11 @@ nav .fas{
 		font-size: 28px;
 	}
 	#header{
+		width: 100%;
+		height: 100vh;
+		background: white;
+		background-size: cover;
+		background-position: center;
 		background-image: url(img/phone-bg.png);
 	}
 	h1{
