--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 \*-----------------------------------*/
 
 /**
- * copyright 2022 codewithsadee
+ * copyright 2022 soft -digitals
  */
 
 
@@ -251,10 +251,12 @@ body {
 }
 
 .logo {
+  display: flex;
   color: var(--white);
   font-family: var(--ff-poppins);
   font-size: 2.4rem;
 }
+
 
 .nav-toggle-btn { font-size: 3rem; }
 
@@ -287,14 +289,18 @@ body {
   transition: var(--transition-1);
 }
 
-.navbar-link:is(:hover, :focus) { color: var(--orange-soda); }
+.navbar-link:is(:hover, :focus) { color: var(--rufous); }
 
 .navbar .btn {
   background-color: var(--orange-soda);
   margin-block-start: 15px;
 }
 
-
+.icon {
+  display: inline-block;
+  font-size: 2.4rem;
+  padding: 10px 5px;
+}
 
 
 
@@ -381,6 +387,7 @@ body {
 
 .about :is(.section-title, .section-text) { margin-block-end: 30px; }
 
+.section-subtitle {color: var(--rufous);}
 
 
 
@@ -395,48 +402,68 @@ body {
 
 .portfolio-list {
   display: grid;
-  gap: 60px;
+  gap: 10px;
 }
 
 .portfolio-card {
-  background-color: var(--independence);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  padding: 120px 20px;
-  border-radius: var(--radius-20);
+  padding: 20px 20px;
   font-family: var(--ff-barlow);
   color: var(--white);
   font-weight: var(--fw-600);
   transition: var(--transition-2);
 }
 
-.portfolio-list > li:nth-child(even) .card-content { margin-inline-start: auto; }
-
-.portfolio-card .card-subtitle {
-  color: var(--orange-soda);
-  margin-block-end: 5px;
-}
-
-.portfolio-card .card-title {
-  max-width: 20ch;
-  margin-block-end: 20px;
-}
-
-.portfolio-card .btn-link {
-  display: flex;
-  align-items: center;
-  gap: 5px;
+.portfolio-card .btn1-link {
+  display: block;
+  margin-top: 120px;
   font-size: var(--fs-6);
   text-transform: uppercase;
+  color: var(--black);
+  text-decoration: underline;
 }
 
-.portfolio-card .btn-link ion-icon {
-  color: var(--orange-soda);
-  font-size: 1.6rem;
+.portfolio-card .btn2-link {
+  display: block;
+  margin-top: 120px;
+  font-size: var(--fs-6);
+  text-transform: uppercase;
+  color: var(--black);
+  text-decoration: underline;
 }
 
 
+/* .portfolio-list > li:nth-child(even) .card-content { margin-inline-start: auto; } */
+
+#pc1 {
+  /* background-color: var(--independence); */
+  background-image: url("../images/portfolio-5.jpg");
+  background-size: contain;
+	background-repeat: no-repeat;
+  background-position: center;
+  
+}
+
+#pc2 {
+  /* background-color: var(--independence); */
+  background-image: url("../images/portfolio-6.png");
+  background-size: contain;
+	background-repeat: no-repeat;
+  background-position: center;
+}
+
+#pc3 {
+  background-color: var(--independence);
+  background-size: contain;
+	background-repeat: no-repeat;
+  background-position: center;
+}
+
+#pc4 {
+  background-color: var(--independence);
+  background-size: contain;
+	background-repeat: no-repeat;
+  background-position: center;
+}
 
 
 
@@ -571,59 +598,6 @@ textarea.contact-input {
 
 
 
-
-/*-----------------------------------*\
-  #BLOG
-\*-----------------------------------*/
-
-.blog { padding-block-end: 120px; }
-
-.blog .section-title { margin-block-end: 20px; }
-
-.blog .section-text { margin-block-end: 80px; }
-
-.blog-list {
-  display: grid;
-  gap: 40px;
-}
-
-.blog-card { font-family: var(--ff-barlow); }
-
-.blog-card .card-banner {
-  background-color: var(--independence);
-  border-radius: var(--radius-15);
-  overflow: hidden;
-  margin-block-end: 20px;
-}
-
-.blog-card .card-banner img { transition: var(--transition-2); }
-
-.blog-card .card-banner a:is(:hover, :focus) img { transform: scale(1.1); }
-
-.blog-card .card-banner:focus-within {
-  outline: 2px solid var(--white);
-  outline-offset: 4px;
-}
-
-.blog-card .card-tag {
-  color: var(--orange-soda);
-  margin-block-end: 5px;
-}
-
-.blog-card .card-title {
-  color: var(--white);
-  font-weight: var(--fw-600);
-  line-height: 1.3;
-}
-
-.blog-card .card-title a { transition: var(--transition-2); }
-
-.blog-card .card-title a:is(:hover, :focus) { color: var(--orange-soda); }
-
-
-
-
-
 /*-----------------------------------*\
   #FOOTER
 \*-----------------------------------*/
@@ -715,7 +689,8 @@ textarea.contact-input {
    * PORTFOLIO
    */
 
-  .portfolio-list li:nth-child(even) .card-content { margin-inline-start: 50%; }
+   .portfolio-list li:nth-child(even) .card-content { margin-inline-start: 50%; }
+
 
 }
 
@@ -735,7 +710,7 @@ textarea.contact-input {
 
   .portfolio-card {
     background-size: 115%;
-    padding-inline: 80px;
+    /* padding-inline: 20px; */
   }
 
   .portfolio-card:is(:hover, :focus) { background-size: 130%; }
@@ -995,9 +970,54 @@ textarea.contact-input {
    * PORTFOLIO
    */
 
-  .portfolio-card .card-subtitle { font-size: var(--fs-5); }
+   .p-container { padding-inline: 10px; }
 
-  .portfolio-card .btn-link { --fs-6: 1.6rem; }
+
+  .portfolio-list {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    
+  }
+
+  .portfolio-card {
+    cursor: pointer;
+    width: 600px;
+    height: 40vh;
+    border-radius: 0;
+    box-shadow:0 0 1.5px var(--white);
+  }
+
+  .portfolio-card .btn1-link {
+    font-size: var(--fs-5);
+    margin-top: 200px;
+  }
+  
+  .portfolio-card .btn2-link {
+    margin-left: -215px;
+    font-size: var(--fs-5);
+    margin-top: 200px;
+  }
+
+  #pc1{
+    background-size: cover;
+    background-position: left;
+  }
+
+  #pc2{
+    background-size: cover;
+    background-position: left;
+  }
+
+  .icon {
+    font-size: 2.4rem;
+  }
+
 
 
 
